<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">机器视觉控制终端</string>
    <string name="hello_world">Hello world!</string>

    <!-- 菜单名称 -->
    <string name="title_activity_file_manager">文件管理</string>
    <string name="title_activity_camera_params">相机参数</string>
    <string name="title_activity_sys_settings">系统设置</string>
    <string name="title_activity_fastener_settings">钮扣设置</string>
    <string name="title_activity_machine_learning">机器学习</string>
    <string name="title_activity_help">帮助</string>

    <string name="title_activity_inverter">变频器</string>
    
    <!-- 文件管理菜单 -->
    <string-array name="option_file_manager">
        <item>发送文件</item>   
        <item>从U盘读取到SD卡</item>
        <item>从SD卡保存到U盘</item>
        <item>内存及SD卡使用情况</item>
        <item>退出系统</item>
    </string-array>

    <!-- 相机参数菜单 -->
    <string-array name="option_camera_params">
        <item>图像采集参数</item>
        <item>常规设置</item>
        <item>网卡设置</item>
        <item>CAN设置</item>
        <item>Uart设置</item>
    </string-array>
    <!-- 相机参数子菜单（一一对应） -->
    <string-array name="option_camera_params_sub">
        <item>曝光时间,照明时间</item>
        <item></item>
        <item>IP地址,端口地址,MAC地址,TCP端口</item>
        <item>波特率</item>
        <item>波特率,校验方式</item>
    </string-array>
    <!-- 相机子菜单类型 -->
    <string-array name="option_camera_params_type">
        <item>0,0</item>
        <item></item>
        <item>00,00,00,00</item>
        <item>19600n19200n38400n115200</item>
        <item>19600n19200n38400n115200,1无校验n奇校验n偶校验</item>
    </string-array>

    <!-- 系统设置菜单数组 -->
    <string-array name="option_sys_settings">
        <item>工作模式设置</item>
        <item>触发参数设置</item>
        <item>本地IP设置</item>
        <item>AD9849</item>
        <item>传感器设置</item>
        <item>变频器设置</item>
    </string-array>
    <!-- 系统设置子菜单 -->
    <string-array name="option_sys_settings_sub">
        <item>模式选择</item>
        <item></item>
        <item>IP地址,TCP端口</item>
    </string-array>
    <!-- 系统设置子菜单类型 -->
    <string-array name="option_sys_settings_type">
        <item>1分捡模式n演示模式n调试模式</item>
        <item>0,0,0,0</item>
        <item>0,0,0,0</item>
    </string-array>

    <!-- 钮扣设置菜单选项 -->
    <string-array name="option_fastener_settings">
        <item>选择算法</item>
        <item>新建配置文件</item>
        <item>加载配置文件</item>
        <item>存储配置文件</item>
    </string-array>
    <!-- 钮扣设置子菜单 -->
    <string-array name="option_fastener_settings_sub">
        <item>算法号</item>
        <item>钮扣编号,缺陷种类,阈值,钮扣图像样本</item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="option_fastener_settings_type">
        <item>1算法0n算法1n算法2</item>
        <item>0,1堵孔n缺边n裂纹,0,0</item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="option_fastener_settings_ini">
        <item></item>
        <item>id,defact,threshold</item>
        <item></item>
        <item></item>
    </string-array>

    <!-- 机器学习选项 -->
    <string-array name="option_machine_learning">
        <item>新建钮扣样本</item>
        <item>查询钮扣样本</item>
        <item>SVM学习</item>
    </string-array>

    <!-- 钮扣信息配置菜单 -->
    <string-array name="buttoninfo_config">
        <item>基本信息</item>
        <item>算法配置</item>
        <item>判别标准配置</item>
    </string-array>
    <string-array name="buttoninfo_menu">
        <item>外形,线孔个数,颜色,字符,花纹,透光特性,材质</item>
        <item>外形缺陷,线孔缺陷,色差缺陷,表面缺陷</item>
        <item>外形缺陷标准,线孔缺陷标准,色差缺陷标准,表面缺陷标准</item>
    </string-array>
    <string-array name="buttoninfo_type">
        <item>1圆形n方形n心形n三角形,14n2,1深色n浅色,1本色n异色n无,1本色n异色n无,1透明n半透明n不透明,1树脂n塑料n金属n木材n贝壳n牛角</item>
        <item>1是n否,1是n否,1是n否,1是n否</item>
        <item>0,0,0,0</item>
    </string-array>
    
    <!-- 钮扣信息配置菜单 -->
    <string-array name="newbuttoninfo_config">
        <item>钮扣图片</item>
        <item>基本信息</item>
        <item>算法配置</item>
        <item>判别标准配置</item>
    </string-array>
    <string-array name="newbuttoninfo_menu">
        <item></item>
        <item>外形,线孔个数,颜色,字符,花纹,透光特性,材质</item>
        <item>外形缺陷,线孔缺陷,色差缺陷,表面缺陷</item>
        <item>外形缺陷标准,线孔缺陷标准,色差缺陷标准,表面缺陷标准</item>
    </string-array>
    <string-array name="newbuttoninfo_type">
        <item></item>
        <item>1圆形n方形n心形n三角形,14n2,1深色n浅色,1本色n异色n无,1本色n异色n无,1透明n半透明n不透明,1树脂n塑料n金属n木材n贝壳n牛角</item>
        <item>1是n否,1是n否,1是n否,1是n否</item>
        <item>0,0,0,0</item>
    </string-array>
    
    

    <!-- 帮助菜单选项 -->
    <string-array name="option_help">
        <item>帮助文档</item>
        <item>版本信息</item>
    </string-array>

    <!-- 连接结果提示 -->
    <string name="connection_fail">网络连接失败！</string>
    <string name="connection_break">网络连接断开！</string>

    <!-- IP设置 -->
    <string name="ip">192.168.0.112</string>

    <!-- 主界面菜单项 -->
    <string name="parameter1">相机参数设置</string>
    <string name="parameter2">色彩选项:</string>
    <string name="parameter3">流水线设置</string>
    <string name="gray">灰度</string>
    <string name="colors">彩色</string>
    <string name="savePic">保存图片</string>
    <string name="saveOption">保存设置</string>
    <string name="openSCI_sucssess">串口打开成功</string>
    <string name="closeSCI_sucssess">串口关闭</string>

    <!-- 其他资源 -->
    <string name="photo_imv">相机图片显示框 </string>

    <!-- 电机速度 -->
    <string-array name="motor_speed">
        <item>慢速</item>
        <item>正常</item>
        <item>快速</item>
    </string-array>

    <!-- 左侧菜单 -->
    <string-array name="menu_array">
        <item>网络设置</item>
        <item>串口设置</item>
        <item>CAN总线设置</item>
        <item>电机设置</item>
        <item>其他</item>
    </string-array>

    <!-- SCI菜单选项 -->
    <string-array name="sci_menu">
        <item>设置NET的参数</item>
        <item>设置Uart和HECC</item>
        <item>设置SC280工作方式</item>
        <item>设置AD9849</item>
        <item>恢复出厂设置</item>
        <item>读取系统参数</item>
        <item>设置系统时间</item>
        <item>读取计数结果</item>
        <item>设置传输状态</item>
        <item>设置时间显示</item>
        <item>设置温度显示</item>
        <item>选择算法</item>
    </string-array>

    <!-- 系统设置→设备参数设置内容 -->
    <string-array name="device_setting">
        <item>MT9V032</item>
        <item>ISL12026</item>
        <item>AT25040</item>
    </string-array>

    <!-- 系统设置→波特率参数设置内容 -->
    <string-array name="uart_baudrate">
        <item>115200</item>
        <item>19200</item>
        <item>9600</item>
    </string-array>

    <!-- 系统设置→校验模式参数设置内容 -->
    <string-array name="parity">
        <item>无校验</item>
        <item>奇校验</item>
        <item>偶校验</item>
    </string-array>

    <!-- 系统设置→数据位数参数设置内容 -->
    <string-array name="data_len">
        <item>5位</item>
        <item>6位</item>
        <item>7位</item>
        <item>8位</item>
    </string-array>

    <!-- 系统设置→停止位参数设置内容 -->
    <string-array name="stop_bit">
        <item>1位</item>
        <item>2位</item>
    </string-array>

    <!-- 系统设置→停止位参数设置内容 -->
    <string-array name="hecc_baurate">
        <item>1M</item>
    </string-array>

    <!-- 设备参数设置之常规→Input type -->
    <string-array name="device_setting_input_type">
        <item>ICX414AL</item>
    </string-array>
    <string-array name="device_setting_output_type">
        <item>net</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="title_activity_debug_mode">DebugMode</string>
    <string name="title_activity_button_sample">钮扣样本</string>
    <string name="title_activity_device_setting">DeviceSetting</string>
    <string name="option_machine_learning_info">外形,线孔个数,颜色,字符,花纹,透光特性,材质</string>
    <string name="option_machine_alg_config">外形缺陷,线孔缺陷,色差缺陷,表面缺陷</string>
    <string name="option_machine_criteria_config">外形缺陷标准,线孔缺陷标准,色差缺陷标准,表面缺陷标准</string>
    <string name="title_activity_new_button">新建钮扣样本</string>
    <string name="option_machine_check_condition">外形,线孔个数,颜色,字符,花纹</string>
    <string name="option_machine_query_item">1圆形n方形n心形n三角形,14n2,1深色n浅色,1本色n异色n无,1本色n异色n无,1透明n半透明n不透明,1树脂n塑料n金属n木材n贝壳n牛角</string>

    <!-- 变频器 -->
    <string name="text_head">变频器通讯参数设置为：波特率9600，奇校验，数据位8位，停止位1位，站号为0</string>
    <string name="text_status">变频器状态：</string>
    <string name="text_velocity">变频器速度为(r/min)：</string>
    <string name="text_current">变频器电流为(A)：</string>
    <string name="text_ram_frq">RAM频率为(Hz)：</string>
    <string name="text_prom_frq">E2PROM频率为(Hz)：</string>
    <string name="menu_alarm_item">报警查询</string>
    <string name="btn_reset">复位</string>
    <string name="loading">操作中，请稍后</string>
    <string name="setting">参数设置</string>
    <string name="menu_more">设置</string>
    
    
</resources>