<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 顶部菜单栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp" >

        <Button
            android:id="@+id/main_bt_file_manager"
            style="@style/top_button"
            android:layout_marginLeft="0dp"
            android:text="@string/title_activity_file_manager" />

        <Button
            android:id="@+id/main_bt_camera_params"
            style="@style/top_button"
            android:text="@string/title_activity_camera_params" />

        <Button
            android:id="@+id/main_bt_sys_settings"
            style="@style/top_button"
            android:text="@string/title_activity_sys_settings" />

        <Button
            android:id="@+id/main_bt_fastener_settings"
            style="@style/top_button"
            android:text="@string/title_activity_fastener_settings" />

        <Button
            android:id="@+id/main_bt_machine_learning"
            style="@style/top_button"
            android:text="@string/title_activity_machine_learning" />

        <Button
            android:id="@+id/main_bt_help"
            style="@style/top_button"
            android:text="@string/title_activity_help" />
    </LinearLayout>

    <!-- 中间图片显示区域 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:background="@drawable/pic_bg" >

            <!-- 左侧相机1区域 -->

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="相机1"
                    android:textColor="#464ADC"
                    android:textSize="30sp" >
                </TextView>

                <ImageView
                    android:layout_width="148px"
                    android:layout_height="148px"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_state" />

                <ImageView
                    android:id="@+id/main_imv_photo1"
                    android:layout_width="128px"
                    android:layout_height="128px"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:onClick="onClick_buttonPicture"
                    android:src="@drawable/qualified" />

                <ImageView
                    android:id="@+id/main_imv_result1"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_below="@id/main_imv_photo1"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/correct" >
                </ImageView>
            </RelativeLayout>
            <!-- 右侧相机2区域 -->

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="相机2"
                    android:textColor="#464ADC"
                    android:textSize="30sp" >
                </TextView>

                <ImageView
                    android:layout_width="148px"
                    android:layout_height="148px"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_state" />

                <ImageView
                    android:id="@+id/main_imv_photo2"
                    android:layout_width="128px"
                    android:layout_height="128px"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:onClick="onClick_buttonPicture"
                    android:src="@drawable/qualified" >
                </ImageView>

                <ImageView
                    android:id="@+id/main_imv_result2"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_below="@id/main_imv_photo2"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/wrong" >
                </ImageView>
            </RelativeLayout>
        </LinearLayout>
        <!-- 中间右侧按钮 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_control_test"
                style="@style/control_button"
                android:onClick="onClick_control"
                android:text="检测" />

            <Button
                android:id="@+id/bt_control_pause"
                style="@style/control_button"
                android:layout_marginLeft="12dp"
                android:onClick="onClick_control"
                android:text="暂停" />

            <Button
                android:id="@+id/bt_control_stop"
                style="@style/control_button"
                android:layout_marginLeft="12dp"
                android:onClick="onClick_control"
                android:text="停止"
                android:textColor="#F00" />
        </LinearLayout>
    </LinearLayout>
    <!-- 底部区域 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingTop="3dp" >

        <!-- 状态窗口 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/bg_state"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="状态窗口"
                android:textColor="#3F48CC"
                android:textSize="30sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/tv_qualified_rate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:gravity="center_horizontal"
                        android:text="合格率："
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_qualified"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:text="合格："
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_disqualified"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:text="不合格："
                        android:textSize="30sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/tv_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:text="温度："
                        android:textSize="30sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <!-- 底部右侧按钮 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:padding="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="20dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="20dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="相机1："
                        android:textSize="40sp" />

                    <ToggleButton
                        android:id="@+id/net_link1"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/toggle_btn"
                        android:button="@null"
                        android:checked="false"
                        android:textOff="未连接"
                        android:textOn="连接成功"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="20dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="相机2："
                        android:textSize="40sp" />

                    <ToggleButton
                        android:id="@+id/net_link2"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/toggle_btn"
                        android:button="@null"
                        android:checked="false"
                        android:textOff="未连接"
                        android:textOn="连接成功"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>